--- a/views/index.html
+++ b/views/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>{{ title }}</title>
-  </head>
-  <body>
-    <h1>Hello {{ name }}</h1>
-  </body>
-</html>
+{% extends "base.html" %}
+{% block content %}
+    <h1>Hello {{ name | upper }}</h1>
+    <img src="cat.jpg" style="width: 250px;"></img>
+    <ul>
+      {% for f in friends %}
+        <li>{{ f.name}}</li>
+      {% endfor %}
+    </ul>
+{% endblock %}
